--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -1,4 +1,5 @@
 {
+  "player.wrapper.aria": "Área do tocador",
   "player.chat.wrapper.aria": "Área do chat",
   "player.presentation.wrapper.aria": "Área da apresentação",
   "player.presentation.slide.wrapper.aria": "Área do slide",
