Extra aria-labels

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -1,4 +1,6 @@
 {
+  "error.wrapper.aria": "Error area",
+  "loader.wrapper.aria": "Loader area",
   "player.wrapper.aria": "Player area",
   "player.chat.wrapper.aria": "Chat area",
   "player.presentation.wrapper.aria": "Presentation area",
