--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -1,4 +1,6 @@
 {
+  "error.wrapper.aria": "Área do erro",
+  "loader.wrapper.aria": "Área do carregador",
   "player.wrapper.aria": "Área do tocador",
   "player.chat.wrapper.aria": "Área do chat",
   "player.presentation.wrapper.aria": "Área da apresentação",
