--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -3,6 +3,7 @@
   "loader.wrapper.aria": "Área do carregador",
   "player.wrapper.aria": "Área do tocador",
   "player.chat.wrapper.aria": "Área do chat",
+  "player.notes.wrapper.aria": "Área das notas",
   "player.presentation.wrapper.aria": "Área da apresentação",
   "player.screenshare.wrapper.aria": "Área do compartilhamento de tela",
   "player.thumbnails.wrapper.aria": "Área das miniaturas",
