Add talking users component

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -6,6 +6,7 @@
   "player.notes.wrapper.aria": "Notes area",
   "player.presentation.wrapper.aria": "Presentation area",
   "player.screenshare.wrapper.aria": "Screenshare area",
+  "player.talkers.wrapper.aria": "Talkers area",
   "player.thumbnails.wrapper.aria": "Thumbnails area",
   "player.video.wrapper.aria": "Video area"
 }
