--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -6,6 +6,7 @@
   "player.notes.wrapper.aria": "Área de notas",
   "player.presentation.wrapper.aria": "Área de presentación",
   "player.screenshare.wrapper.aria": "Área de pantalla compartida",
+  "player.talkers.wrapper.aria": "Área de habladores",
   "player.thumbnails.wrapper.aria": "Área de miniaturas",
   "player.video.wrapper.aria": "Área de video"
 }
