--- a/src/locales/messages/de.json
+++ b/src/locales/messages/de.json
@@ -6,6 +6,7 @@
   "player.notes.wrapper.aria": "Notizenbereich",
   "player.presentation.wrapper.aria": "Präsentationsbereich",
   "player.screenshare.wrapper.aria": "Screenshare-Bereich",
+  "player.talkers.wrapper.aria": "Sprecherbereich",
   "player.thumbnails.wrapper.aria": "Miniaturansichten",
   "player.video.wrapper.aria": "Videobereich"
 }
