--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -6,6 +6,7 @@
   "player.notes.wrapper.aria": "Area note",
   "player.presentation.wrapper.aria": "Area di presentazione",
   "player.screenshare.wrapper.aria": "Area di condivisione schermo",
+  "player.talkers.wrapper.aria": "Area di oratori",
   "player.thumbnails.wrapper.aria": "Area miniature",
   "player.video.wrapper.aria": "Area video"
 }
