--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -1,4 +1,12 @@
 {
+  "button.about.aria": "約",
+  "button.close.aria": "モーダルを閉じる",
+  "button.fullscreen.aria": "全画面コンテンツ",
+  "button.restore.aria": "コンテンツを復元",
+  "button.search.aria": "探す",
+  "button.section.aria": "サイドセクション",
+  "button.swap.aria": "コンテンツを入れ替え",
+  "button.thumbnails.aria": "サムネイル",
   "error.wrapper.aria": "エラー領域",
   "loader.wrapper.aria": "ローダーエリア",
   "player.wrapper.aria": "プレイヤーエリア",
