--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -1,4 +1,12 @@
 {
+  "button.about.aria": "حول",
+  "button.close.aria": "إغلاق مشروط",
+  "button.fullscreen.aria": "محتوى ملء الشاشة",
+  "button.restore.aria": "استعادة المحتوى",
+  "button.search.aria": "بحث",
+  "button.section.aria": "قسم جانبي",
+  "button.swap.aria": "محتوى المبادلة",
+  "button.thumbnails.aria": "صور مصغرة",
   "error.wrapper.aria": "منطقة الخطأ",
   "loader.wrapper.aria": "منطقة اللودر",
   "player.wrapper.aria": "منطقة لاعب",
