--- a/src/locales/messages/fr.json
+++ b/src/locales/messages/fr.json
@@ -1,4 +1,12 @@
 {
+  "button.about.aria": "À propos",
+  "button.close.aria": "Fermer modal",
+  "button.fullscreen.aria": "Contenu plein écran",
+  "button.restore.aria": "Restaurer le contenu",
+  "button.search.aria": "Chercher",
+  "button.section.aria": "Section latérale",
+  "button.swap.aria": "Contenu d'échange",
+  "button.thumbnails.aria": "Miniatures",
   "error.wrapper.aria": "Zone d'erreur",
   "loader.wrapper.aria": "Zone de chargement",
   "player.wrapper.aria": "Zone de lecteur",
