--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -1,4 +1,12 @@
 {
+  "button.about.aria": "Di",
+  "button.close.aria": "Chiudi modale",
+  "button.fullscreen.aria": "Contenuto a schermo intero",
+  "button.restore.aria": "Ripristina contenuto",
+  "button.search.aria": "Ricerca",
+  "button.section.aria": "Sezione laterale",
+  "button.swap.aria": "Scambia contenuto",
+  "button.thumbnails.aria": "Miniature",
   "error.wrapper.aria": "Area di errore",
   "loader.wrapper.aria": "Area del caricatore",
   "player.wrapper.aria": "Area del lettore",
