--- a/src/locales/messages/ru.json
+++ b/src/locales/messages/ru.json
@@ -1,4 +1,12 @@
 {
+  "button.about.aria": "Около",
+  "button.close.aria": "Закрыть модальное",
+  "button.fullscreen.aria": "Полноэкранный контент",
+  "button.restore.aria": "Восстановить контент",
+  "button.search.aria": "Поиск",
+  "button.section.aria": "Боковой раздел",
+  "button.swap.aria": "Обменяться контентом",
+  "button.thumbnails.aria": "Эскизы",
   "error.wrapper.aria": "Область ошибок",
   "loader.wrapper.aria": "Зона погрузчика",
   "player.wrapper.aria": "Игровая зона",
