Add new search experience
Removed videojs marker plugin and included a new search experience.

Search modal will preview the thumbnails search result and will propagate
it to the thumbnails area.

--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -1,5 +1,6 @@
 {
   "button.about.aria": "حول",
+  "button.clear.aria": "مسح البحث",
   "button.close.aria": "إغلاق مشروط",
   "button.fullscreen.aria": "محتوى ملء الشاشة",
   "button.restore.aria": "استعادة المحتوى",
