--- a/src/locales/messages/de.json
+++ b/src/locales/messages/de.json
@@ -1,5 +1,6 @@
 {
   "button.about.aria": "Über",
+  "button.clear.aria": "Saubere suche",
   "button.close.aria": "Modal schließen",
   "button.fullscreen.aria": "Vollbildinhalt",
   "button.restore.aria": "Inhalt wiederherstellen",
