--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -1,5 +1,6 @@
 {
   "button.about.aria": "Di",
+  "button.clear.aria": "Cancella ricerca",
   "button.close.aria": "Chiudi modale",
   "button.fullscreen.aria": "Contenuto a schermo intero",
   "button.restore.aria": "Ripristina contenuto",
