--- a/src/locales/messages/fa.json
+++ b/src/locales/messages/fa.json
@@ -1,7 +1,7 @@
 {
   "button.about.aria": "درباره",
   "button.clear.aria": "پاک کردن جست و جو",
-  "button.close.aria": "پاک کردن",
+  "button.close.aria": "بستن",
   "button.fullscreen.aria": "محتوای تمام صفحه",
   "button.restore.aria": "بازگرداندن محتوا",
   "button.search.aria": "جست و جو",
