--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -22,6 +22,8 @@
   "player.notes.wrapper.aria": "منطقة الملاحظات",
   "player.presentation.wrapper.aria": "منطقة العرض",
   "player.screenshare.wrapper.aria": "منطقة مشاركة الشاشة",
+  "player.search.modal.title": "Search",
+  "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "منطقة المصغرات",
   "player.video.wrapper.aria": "منطقة الفيديو"
 }
