--- a/src/locales/messages/de.json
+++ b/src/locales/messages/de.json
@@ -22,6 +22,8 @@
   "player.notes.wrapper.aria": "Notizenbereich",
   "player.presentation.wrapper.aria": "Präsentationsfläche",
   "player.screenshare.wrapper.aria": "Screenshare-Bereich",
+  "player.search.modal.title": "Search",
+  "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "Miniaturansichten",
   "player.video.wrapper.aria": "Videobereich"
 }
