--- a/src/locales/messages/fa.json
+++ b/src/locales/messages/fa.json
@@ -22,6 +22,8 @@
   "player.notes.wrapper.aria": "ناحیه یادداشت ها",
   "player.presentation.wrapper.aria": "ناحیه ارایه",
   "player.screenshare.wrapper.aria": "ناحیه اشتراک صفحه",
+  "player.search.modal.title": "Search",
+  "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "ناحیه بندانگشتی ها",
   "player.video.wrapper.aria": "ناحیه ویدیو"
 }
