--- a/src/locales/messages/fr.json
+++ b/src/locales/messages/fr.json
@@ -22,6 +22,8 @@
   "player.notes.wrapper.aria": "Zone de notes",
   "player.presentation.wrapper.aria": "Zone de présentation",
   "player.screenshare.wrapper.aria": "Zone de partage d'écran",
+  "player.search.modal.title": "Search",
+  "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "Zone des miniatures",
   "player.video.wrapper.aria": "Zone vidéo"
 }
