--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -22,6 +22,8 @@
   "player.notes.wrapper.aria": "Área das notas",
   "player.presentation.wrapper.aria": "Área da apresentação",
   "player.screenshare.wrapper.aria": "Área do compartilhamento de tela",
+  "player.search.modal.title": "Buscar",
+  "player.search.modal.subtitle": "Ache conteúdo nos slides da apresentação",
   "player.thumbnails.wrapper.aria": "Área das miniaturas",
   "player.video.wrapper.aria": "Área do vídeo"
 }
