--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -18,6 +18,8 @@
   "player.chat.message.poll.option.abstention": "どちらでもない",
   "player.chat.message.poll.option.true": "○",
   "player.chat.message.poll.option.false": "×",
+  "player.chat.message.question.name": "Question",
+  "player.chat.message.question.answer": "Answer",
   "player.chat.wrapper.aria": "チャットエリア",
   "player.notes.wrapper.aria": "ノートエリア",
   "player.presentation.wrapper.aria": "プレゼンテーションエリア",
