--- a/src/locales/messages/de.json
+++ b/src/locales/messages/de.json
@@ -18,6 +18,8 @@
   "player.chat.message.poll.option.abstention": "Enthaltung",
   "player.chat.message.poll.option.true": "Wahr",
   "player.chat.message.poll.option.false": "Falsch",
+  "player.chat.message.question.name": "Question",
+  "player.chat.message.question.answer": "Answer",
   "player.chat.wrapper.aria": "Chat-Bereich",
   "player.notes.wrapper.aria": "Notizenbereich",
   "player.presentation.wrapper.aria": "Präsentationsfläche",
