--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -18,6 +18,8 @@
   "player.chat.message.poll.option.abstention": "Abstención",
   "player.chat.message.poll.option.true": "Verdadero",
   "player.chat.message.poll.option.false": "Falso",
+  "player.chat.message.question.name": "Question",
+  "player.chat.message.question.answer": "Answer",
   "player.chat.wrapper.aria": "Área de chat",
   "player.notes.wrapper.aria": "Área de notas",
   "player.presentation.wrapper.aria": "Área de presentación",
