--- a/src/locales/messages/fr.json
+++ b/src/locales/messages/fr.json
@@ -18,6 +18,8 @@
   "player.chat.message.poll.option.abstention": "S'abstenir",
   "player.chat.message.poll.option.true": "Vrai",
   "player.chat.message.poll.option.false": "Faux",
+  "player.chat.message.question.name": "Question",
+  "player.chat.message.question.answer": "Answer",
   "player.chat.wrapper.aria": "Zone de chat",
   "player.notes.wrapper.aria": "Zone de notes",
   "player.presentation.wrapper.aria": "Zone de présentation",
