--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -18,6 +18,8 @@
   "player.chat.message.poll.option.abstention": "Astensione",
   "player.chat.message.poll.option.true": "Vero",
   "player.chat.message.poll.option.false": "Falso",
+  "player.chat.message.question.name": "Question",
+  "player.chat.message.question.answer": "Answer",
   "player.chat.wrapper.aria": "Area di chat",
   "player.notes.wrapper.aria": "Area note",
   "player.presentation.wrapper.aria": "Area di presentazione",
