--- a/src/locales/messages/tr.json
+++ b/src/locales/messages/tr.json
@@ -18,6 +18,7 @@
   "player.chat.message.poll.option.abstention": "Çekimser",
   "player.chat.message.poll.option.true": "Doğru",
   "player.chat.message.poll.option.false": "Yanlış",
+  "player.chat.message.externalvideo.name": "External video",
   "player.chat.wrapper.aria": "Sohbet",
   "player.notes.wrapper.aria": "Notlar",
   "player.presentation.wrapper.aria": "Sunum",
