--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -18,6 +18,7 @@
   "player.chat.message.poll.option.abstention": "الامتناع",
   "player.chat.message.poll.option.true": "حقيقي",
   "player.chat.message.poll.option.false": "خطأ شنيع",
+  "player.chat.message.externalvideo.name": "External video",
   "player.chat.wrapper.aria": "منطقة الدردشة",
   "player.notes.wrapper.aria": "منطقة الملاحظات",
   "player.presentation.wrapper.aria": "منطقة العرض",
