feat(chat): system messages

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "Abstention",
   "player.chat.message.poll.option.true": "True",
   "player.chat.message.poll.option.false": "False",
-  "player.chat.message.externalvideo.name": "External video",
+  "player.chat.message.externalVideo.name": "External video",
   "player.chat.wrapper.aria": "Chat area",
   "player.notes.wrapper.aria": "Notes area",
   "player.presentation.wrapper.aria": "Presentation area",
