--- a/src/locales/messages/fa.json
+++ b/src/locales/messages/fa.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "ممتنع",
   "player.chat.message.poll.option.true": "درست",
   "player.chat.message.poll.option.false": "نادرست",
-  "player.chat.message.externalvideo.name": "External video",
+  "player.chat.message.externalVideo.name": "External video",
   "player.chat.wrapper.aria": "ناحیه گفت و گو",
   "player.notes.wrapper.aria": "ناحیه یادداشت ها",
   "player.presentation.wrapper.aria": "ناحیه ارایه",
