--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "Astensione",
   "player.chat.message.poll.option.true": "Vero",
   "player.chat.message.poll.option.false": "Falso",
-  "player.chat.message.externalvideo.name": "Video esterno",
+  "player.chat.message.externalVideo.name": "Video esterno",
   "player.chat.wrapper.aria": "Area di chat",
   "player.notes.wrapper.aria": "Area note",
   "player.presentation.wrapper.aria": "Area di presentazione",
