--- a/src/locales/messages/ru.json
+++ b/src/locales/messages/ru.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "Воздержусь",
   "player.chat.message.poll.option.true": "Правда",
   "player.chat.message.poll.option.false": "Ложь",
-  "player.chat.message.externalvideo.name": "External video",
+  "player.chat.message.externalVideo.name": "External video",
   "player.chat.wrapper.aria": "Область чата",
   "player.notes.wrapper.aria": "Область заметок",
   "player.presentation.wrapper.aria": "Площадь презентации",
