--- a/src/locales/messages/fa.json
+++ b/src/locales/messages/fa.json
@@ -1,30 +1,30 @@
 {
   "button.about.aria": "درباره",
-  "button.clear.aria": "پاک کردن جست و جو",
+  "button.clear.aria": "پاک کردن جست‌و‌جو",
   "button.close.aria": "بستن",
   "button.fullscreen.aria": "محتوای تمام صفحه",
   "button.restore.aria": "بازگرداندن محتوا",
-  "button.search.aria": "جست و جو",
+  "button.search.aria": "جست‌و‌جو",
   "button.section.aria": "بخش کناری",
-  "button.swap.aria": "جا به جایی محتوا",
+  "button.swap.aria": "جا‌به‌جایی محتوا",
   "error.wrapper.aria": "ناحیه خطا",
   "loader.wrapper.aria": "ناحیه بارگذاری",
-  "player.wrapper.aria": "ناحیه پخش کننده",
+  "player.wrapper.aria": "ناحیه پخش‌کننده",
   "player.chat.message.poll.name": "نتیجه نظرسنجی",
   "player.chat.message.poll.question": "سوال",
-  "player.chat.message.poll.options": "گزینه ها",
+  "player.chat.message.poll.options": "گزینه‌ها",
   "player.chat.message.poll.option.yes": "بله",
   "player.chat.message.poll.option.no": "خیر",
   "player.chat.message.poll.option.abstention": "ممتنع",
   "player.chat.message.poll.option.true": "درست",
   "player.chat.message.poll.option.false": "نادرست",
-  "player.chat.message.externalVideo.name": "External video",
-  "player.chat.wrapper.aria": "ناحیه گفت و گو",
-  "player.notes.wrapper.aria": "ناحیه یادداشت ها",
+  "player.chat.message.externalVideo.name": "ویدیوی خارجی",
+  "player.chat.wrapper.aria": "ناحیه گفت‌و‌گو",
+  "player.notes.wrapper.aria": "ناحیه یادداشت‌ها",
   "player.presentation.wrapper.aria": "ناحیه ارایه",
   "player.screenshare.wrapper.aria": "ناحیه اشتراک صفحه",
-  "player.search.modal.title": "Search",
-  "player.search.modal.subtitle": "Find presentation slides content",
-  "player.thumbnails.wrapper.aria": "ناحیه بندانگشتی ها",
+  "player.search.modal.title": "جست‌و‌جو",
+  "player.search.modal.subtitle": "جست‌و‌جوی محتوای ارایه",
+  "player.thumbnails.wrapper.aria": "ناحیه بندانگشتی‌ها",
   "player.video.wrapper.aria": "ناحیه ویدیو"
 }
