refactor(video): rename video to webcams

--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "Search",
   "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "منطقة المصغرات",
-  "player.video.wrapper.aria": "منطقة الفيديو"
+  "player.webcams.wrapper.aria": "منطقة الفيديو"
 }
