--- a/src/locales/messages/fa.json
+++ b/src/locales/messages/fa.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "جست‌و‌جو",
   "player.search.modal.subtitle": "جست‌و‌جوی محتوای ارایه",
   "player.thumbnails.wrapper.aria": "ناحیه بندانگشتی‌ها",
-  "player.video.wrapper.aria": "ناحیه ویدیو"
+  "player.webcams.wrapper.aria": "ناحیه ویدیو"
 }
