--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "Search",
   "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "Área de miniaturas",
-  "player.video.wrapper.aria": "Área de video"
+  "player.webcams.wrapper.aria": "Área de video"
 }
