--- a/src/locales/messages/fr.json
+++ b/src/locales/messages/fr.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "Search",
   "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "Zone des miniatures",
-  "player.video.wrapper.aria": "Zone vidéo"
+  "player.webcams.wrapper.aria": "Zone vidéo"
 }
