--- a/src/locales/messages/it.json
+++ b/src/locales/messages/it.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "Search",
   "player.search.modal.subtitle": "Find presentation slides content",
   "player.thumbnails.wrapper.aria": "Area miniature",
-  "player.video.wrapper.aria": "Area video"
+  "player.webcams.wrapper.aria": "Area video"
 }
