--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -26,5 +26,5 @@
   "player.search.modal.title": "検索",
   "player.search.modal.subtitle": "プレゼンテーションスライドの内容を検索",
   "player.thumbnails.wrapper.aria": "サムネイルエリア",
-  "player.video.wrapper.aria": "ビデオエリア"
+  "player.webcams.wrapper.aria": "ビデオエリア"
 }
