--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "どちらでもない",
   "player.chat.message.poll.option.true": "○",
   "player.chat.message.poll.option.false": "×",
-  "player.chat.message.externalVideo.name": "External video",
+  "player.chat.message.video.name": "External video",
   "player.chat.wrapper.aria": "チャットエリア",
   "player.notes.wrapper.aria": "ノートエリア",
   "player.presentation.wrapper.aria": "プレゼンテーションエリア",
