--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -18,7 +18,7 @@
   "player.chat.message.poll.option.abstention": "Abstenção",
   "player.chat.message.poll.option.true": "Verdadeiro",
   "player.chat.message.poll.option.false": "Falso",
-  "player.chat.message.externalVideo.name": "Vídeo externo",
+  "player.chat.message.video.name": "Vídeo externo",
   "player.chat.wrapper.aria": "Área do chat",
   "player.notes.wrapper.aria": "Área das notas",
   "player.presentation.wrapper.aria": "Área da apresentação",
