feat(shortcuts): add cheatsheet
Add information about the playback's existing shortcuts at the about modal.

--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "エラー領域",
   "loader.wrapper.aria": "ローダーエリア",
   "player.wrapper.aria": "プレイヤーエリア",
+  "player.about.modal.shortcuts.title": "Shortcuts",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Toggle fullscreen",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Toggle side section",
+  "player.about.modal.shortcuts.seek.backward": "Seek backwards",
+  "player.about.modal.shortcuts.seek.forward": "Seek forwards",
+  "player.about.modal.shortcuts.skip.next": "Next slide",
+  "player.about.modal.shortcuts.skip.previous": "Previous Slide",
+  "player.about.modal.shortcuts.swap": "Swap content",
   "player.chat.message.poll.name": "投票結果",
   "player.chat.message.poll.question": "質問",
   "player.chat.message.poll.options": "項目",
