--- a/src/locales/messages/ar.json
+++ b/src/locales/messages/ar.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "منطقة الخطأ",
   "loader.wrapper.aria": "منطقة اللودر",
   "player.wrapper.aria": "منطقة لاعب",
+  "player.about.modal.shortcuts.title": "Shortcuts",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Toggle fullscreen",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Toggle side section",
+  "player.about.modal.shortcuts.seek.backward": "Seek backwards",
+  "player.about.modal.shortcuts.seek.forward": "Seek forwards",
+  "player.about.modal.shortcuts.skip.next": "Next slide",
+  "player.about.modal.shortcuts.skip.previous": "Previous Slide",
+  "player.about.modal.shortcuts.swap": "Swap content",
   "player.chat.message.poll.name": "نتيجة الاستطلاع",
   "player.chat.message.poll.question": "سؤال",
   "player.chat.message.poll.options": "خيارات",
