--- a/src/locales/messages/es.json
+++ b/src/locales/messages/es.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "Área de error",
   "loader.wrapper.aria": "Área del cargador",
   "player.wrapper.aria": "Área de reproductor",
+  "player.about.modal.shortcuts.title": "Shortcuts",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Toggle fullscreen",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Toggle side section",
+  "player.about.modal.shortcuts.seek.backward": "Seek backwards",
+  "player.about.modal.shortcuts.seek.forward": "Seek forwards",
+  "player.about.modal.shortcuts.skip.next": "Next slide",
+  "player.about.modal.shortcuts.skip.previous": "Previous Slide",
+  "player.about.modal.shortcuts.swap": "Swap content",
   "player.chat.message.poll.name": "Resultado de la encuesta",
   "player.chat.message.poll.question": "Pregunta",
   "player.chat.message.poll.options": "Opciones",
