--- a/src/locales/messages/pt.json
+++ b/src/locales/messages/pt.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "Área do erro",
   "loader.wrapper.aria": "Área do carregador",
   "player.wrapper.aria": "Área do tocador",
+  "player.about.modal.shortcuts.title": "Shortcuts",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Toggle fullscreen",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Toggle side section",
+  "player.about.modal.shortcuts.seek.backward": "Seek backwards",
+  "player.about.modal.shortcuts.seek.forward": "Seek forwards",
+  "player.about.modal.shortcuts.skip.next": "Next slide",
+  "player.about.modal.shortcuts.skip.previous": "Previous Slide",
+  "player.about.modal.shortcuts.swap": "Swap content",
   "player.chat.message.poll.name": "Resultado da enquete",
   "player.chat.message.poll.question": "Pergunta",
   "player.chat.message.poll.options": "Opções",
