--- a/src/locales/messages/ru.json
+++ b/src/locales/messages/ru.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "Область ошибок",
   "loader.wrapper.aria": "Зона погрузчика",
   "player.wrapper.aria": "Игровая зона",
+  "player.about.modal.shortcuts.title": "Shortcuts",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Toggle fullscreen",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Toggle side section",
+  "player.about.modal.shortcuts.seek.backward": "Seek backwards",
+  "player.about.modal.shortcuts.seek.forward": "Seek forwards",
+  "player.about.modal.shortcuts.skip.next": "Next slide",
+  "player.about.modal.shortcuts.skip.previous": "Previous Slide",
+  "player.about.modal.shortcuts.swap": "Swap content",
   "player.chat.message.poll.name": "Результат опроса",
   "player.chat.message.poll.question": "Вопрос",
   "player.chat.message.poll.options": "Параметры",
