--- a/src/locales/messages/pt_BR.json
+++ b/src/locales/messages/pt_BR.json
@@ -3,14 +3,14 @@
   "button.clear.aria": "Limpar pesquisa",
   "button.close.aria": "Fechar janela",
   "button.fullscreen.aria": "Conteúdo em tela cheia",
-  "button.restore.aria": "Repor conteúdo",
+  "button.restore.aria": "Restaurar conteúdo",
   "button.search.aria": "Procurar",
-  "button.section.aria": "Secção lateral",
+  "button.section.aria": "Seção lateral",
   "button.swap.aria": "Trocar conteúdo",
   "error.wrapper.aria": "Área de erro",
-  "loader.wrapper.aria": "Área de carregamento",
-  "player.wrapper.aria": "Área do reprodutor",
-  "player.chat.message.poll.name": "Resultado da sondagem",
+  "loader.wrapper.aria": "Área do carregador",
+  "player.wrapper.aria": "Área do player",
+  "player.chat.message.poll.name": "Resultado da enquete",
   "player.chat.message.poll.question": "Pergunta",
   "player.chat.message.poll.options": "Opções",
   "player.chat.message.poll.option.yes": "Sim",
@@ -18,10 +18,10 @@
   "player.chat.message.poll.option.abstention": "Abstenção",
   "player.chat.message.poll.option.true": "Verdadeiro",
   "player.chat.message.poll.option.false": "Falso",
-  "player.chat.wrapper.aria": "Área do chat",
+  "player.chat.wrapper.aria": "Área do bate-papo",
   "player.notes.wrapper.aria": "Área das anotações",
   "player.presentation.wrapper.aria": "Área da apresentação",
-  "player.screenshare.wrapper.aria": "Área da partilha de ecrã",
+  "player.screenshare.wrapper.aria": "Área do compartilhamento de tela",
   "player.search.modal.title": "Procurar",
   "player.search.modal.subtitle": "Encontre o conteúdo dos slides da apresentação",
   "player.thumbnails.wrapper.aria": "Área das miniaturas"
