--- a/src/locales/messages/tr_TR.json
+++ b/src/locales/messages/tr_TR.json
@@ -5,17 +5,17 @@
   "button.fullscreen.aria": "Tam ekran içerik",
   "button.restore.aria": "İçeriği geri yükle",
   "button.search.aria": "Ara",
-  "button.section.aria": "Yan bölüm",
+  "button.section.aria": "yan bölüm",
   "button.swap.aria": "İçeriği değiştir",
   "error.wrapper.aria": "Hata alanı",
-  "loader.wrapper.aria": "Yükleyici alanı",
+  "loader.wrapper.aria": "yükleyici alanı",
   "player.wrapper.aria": "Oynatıcı alanı",
   "player.chat.message.poll.name": "Anket sonucu",
   "player.chat.message.poll.question": "Soru",
   "player.chat.message.poll.options": "Seçenekler",
   "player.chat.message.poll.option.yes": "Evet",
   "player.chat.message.poll.option.no": "Hayır",
-  "player.chat.message.poll.option.abstention": "Çekimser",
+  "player.chat.message.poll.option.abstention": "çekimser",
   "player.chat.message.poll.option.true": "Doğru",
   "player.chat.message.poll.option.false": "Yanlış",
   "player.chat.wrapper.aria": "Sohbet alanı",
