chore: locales from upstream

--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -7,9 +7,21 @@
   "button.search.aria": "検索",
   "button.section.aria": "サイドセクション",
   "button.swap.aria": "コンテンツの入れ替え",
+  "button.theme.aria": "テーマの切り替え",
   "error.wrapper.aria": "エラーエリア",
   "loader.wrapper.aria": "ローダーエリア",
   "player.wrapper.aria": "プレイヤーエリア",
+  "player.about.modal.shortcuts.title": "ショートカット",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "フルスクリーン切り替え",
+  "player.about.modal.shortcuts.play": "再生/ポーズ",
+  "player.about.modal.shortcuts.section": "サイドパネル表示の切り替え",
+  "player.about.modal.shortcuts.seek.backward": "前を検索",
+  "player.about.modal.shortcuts.seek.forward": "先を検索",
+  "player.about.modal.shortcuts.skip.next": "次のスライド",
+  "player.about.modal.shortcuts.skip.previous": "前のスライド",
+  "player.about.modal.shortcuts.swap": "コンテンツ入れ替え",
   "player.chat.message.poll.name": "投票結果",
   "player.chat.message.poll.question": "質問",
   "player.chat.message.poll.options": "項目",
