--- a/src/locales/messages/pt_BR.json
+++ b/src/locales/messages/pt_BR.json
@@ -10,6 +10,17 @@
   "error.wrapper.aria": "Área de erro",
   "loader.wrapper.aria": "Área do carregador",
   "player.wrapper.aria": "Área do player",
+  "player.about.modal.shortcuts.title": "Atalhos",
+  "player.about.modal.shortcuts.alt": "Alt",
+  "player.about.modal.shortcuts.shift": "Shift",
+  "player.about.modal.shortcuts.fullscreen": "Alternar tela cheia",
+  "player.about.modal.shortcuts.play": "Play/Pause",
+  "player.about.modal.shortcuts.section": "Alternar seção lateral",
+  "player.about.modal.shortcuts.seek.backward": "Avançar",
+  "player.about.modal.shortcuts.seek.forward": "Retroceder",
+  "player.about.modal.shortcuts.skip.next": "Próximo slide",
+  "player.about.modal.shortcuts.skip.previous": "Slide anterior",
+  "player.about.modal.shortcuts.swap": "Trocar conteúdo",
   "player.chat.message.poll.name": "Resultado da enquete",
   "player.chat.message.poll.question": "Pergunta",
   "player.chat.message.poll.options": "Opções",
@@ -18,11 +29,13 @@
   "player.chat.message.poll.option.abstention": "Abstenção",
   "player.chat.message.poll.option.true": "Verdadeiro",
   "player.chat.message.poll.option.false": "Falso",
+  "player.chat.message.video.name": "Vídeo externo",
   "player.chat.wrapper.aria": "Área do bate-papo",
   "player.notes.wrapper.aria": "Área das anotações",
   "player.presentation.wrapper.aria": "Área da apresentação",
   "player.screenshare.wrapper.aria": "Área do compartilhamento de tela",
   "player.search.modal.title": "Procurar",
   "player.search.modal.subtitle": "Encontre o conteúdo dos slides da apresentação",
-  "player.thumbnails.wrapper.aria": "Área das miniaturas"
+  "player.thumbnails.wrapper.aria": "Área das miniaturas",
+  "player.webcams.wrapper.aria": "Área das câmeras"
 }
