--- a/src/locales/messages/ja.json
+++ b/src/locales/messages/ja.json
@@ -30,13 +30,13 @@
   "player.chat.message.poll.option.abstention": "どちらでもない",
   "player.chat.message.poll.option.true": "〇",
   "player.chat.message.poll.option.false": "×",
-  "player.chat.message.video.name": "インターネット上の動画",
+  "player.chat.message.video.name": "外部動画",
   "player.chat.wrapper.aria": "チャットエリア",
   "player.notes.wrapper.aria": "メモエリア",
   "player.presentation.wrapper.aria": "プレゼンエリア",
   "player.screenshare.wrapper.aria": "画面共有エリア",
   "player.search.modal.title": "検索",
-  "player.search.modal.subtitle": "プレゼンスライドの内容を探す",
+  "player.search.modal.subtitle": "スライド上のテキストを探す",
   "player.thumbnails.wrapper.aria": "サムネイルエリア",
   "player.webcams.wrapper.aria": "ウェブカムエリア"
 }
